# onetbb_cmake_integration_examples

./: .gitignore  README.md
.github/workflows/: ci.yml
onetbb_from_github_with_fetch_content/: CMakeLists.txt  README.md  run.sh
pre_built_onetbb_from_github/: CMakeLists.txt  README.md  my_app.cpp  run.sh
